# Real3Dprin

./: CE3_3DBenchy.gcode  CE3_Part3.gcode  CMakeLists.txt  Part2.STL  Part3.STL  README.md  RSpcd.py  opencv_cap2.cpp
geforce/: CMakeLists.txt  geforce.cpp
planar_segmentation/: CMakeLists.txt  planar_segmentation.cpp
test/: opencv_cap2.cpp
test2/: CMakeLists.txt  opencv_cap2.cpp
